# ud_co2s_viewer

./: README.md  index.html  license.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
src/: main.ts
src-tauri/: 2  Cargo.toml  about.toml  deny.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
