[package]
name = "ud_co2s_viewer"
version = "1.1.0"
description = "UD-CO2S-Viewer"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "system-tray", "shell-open"] }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
tauri-plugin-positioner = "1.0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
