[lib]
name = "ud_co2s_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[package]
name = "ud_co2s_viewer"
version = "1.1.3"
description = "UD-CO2S-Viewer"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
tauri-plugin-positioner = "2"
tauri-plugin-shell = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
